--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@astrojs/mdx": "^4.0.0",
     "@astrojs/react": "^4.0.0",
     "@astrojs/tailwind": "^6.0.0",
+    "@tailwindcss/typography": "^0.5.19",
     "astro": "^5.0.0",
     "katex": "^0.16.9",
     "react": "^18.2.0",
